--- a/index/index.html
+++ b/index/index.html
@@ -1,119 +1,81 @@
+<script src="https://unpkg.com/vue"></script>
 
-<div id="app-7">
-<table style="width:100%">
-  <!--
-      Now we provide each todo-item with the todo object
-      it's representing, so that its content can be dynamic.
-      We also need to provide each component with a "key",
-      which will be explained later.
-    -->
-    <todo-table-row
-      v-for="row in leanCanvasTableList"
-      v-bind:todo="row"
-      v-bind:key="row.id"
-    ></todo-table-row>
-</table>
+<div id="dynamic-component-demo" class="demo">
+  <button
+    v-for="tab in tabs"
+    v-bind:key="tab"
+    v-bind:class="['tab-button', { active: currentTab === tab }]"
+    v-on:click="currentTab = tab"
+  >{{ tab }}</button>
+
+  <component
+    v-bind:is="currentTabComponent"
+    class="tab"
+  ></component>
 </div>
-
-<!-- development version, includes helpful console warnings -->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
 
-Vue.component('todo-list', {
-  // The todo-item component now accepts a
-  // "prop", which is like a custom attribute.
-  // This prop is called todo.
-  props: ['todo'],
-  template: '\
-    <th><ol><todo-item\
-      v-for="item in {{ todo.valueList }}"\
-      v-bind:todo="item"\
-      v-bind:key="item.Id"\
-    ></todo-item></th><ol>\
-  ',
+Vue.component('tab-problem', { 
+  template: '<div>Home component</div>' 
+})
+Vue.component('tab-solution', { 
+  template: '<div>Posts component</div>' 
+})
+Vue.component('tab-unique-value', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-unfair-advantage', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-customers', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-alternatives', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-kpi', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-high-level-concept', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-channels', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-early-adopters', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-structure', { 
+  template: '<div>Archive component</div>' 
+})
+Vue.component('tab-revenue', { 
+  template: '<div>Archive component</div>' 
 })
 
-Vue.component('todo-item', {
-  // The todo-item component now accepts a
-  // "prop", which is like a custom attribute.
-  // This prop is called todo.
-  props: ['todo'],
-  template: '<li>{{ todo.text }}</li>'
-})
-
-Vue.component('todo-table-row', {
-  // The todo-item component now accepts a
-  // "prop", which is like a custom attribute.
-  // This prop is called todo.
-  props: ['todo'],
-  template: '\
-    <tr><todo-list\
-      v-for="item in {{ todo.valueList }}"\
-      v-bind:todo="item"\
-      v-bind:key="item.Id"\
-    ></todo-list></tr>\
-  ',
-})
 
 var app7 = new Vue({
   el: '#app-7',
   data: {
-    leanCanvasTableList: [
-      {id: 0, valueList:[
-        {id: 0, text: 'Problem', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},
-        {id: 1, text: 'Solution', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 2, text: 'Unique Value', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 3,text: 'Unfair Advantage', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 4, text: 'Customers', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        ]},
-      {id: 1, valueList:[
-        {id: 0, text: 'Alternatives', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 1, text: 'KPI', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 2, text: 'High Level Concept', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 3, text: 'Channels', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 4, text: 'Early Adopters', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        ]},
-      {id: 2, valueList:[
-        {id: 0, text: 'Structure', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        {id: 1, text: 'Revenue', valueList: [
-          { id: 0, text: 'Government data exchange' },
-          { id: 1, text: 'Small buisnesses need' },
-        ]},},
-        ]},
-    ]
-  }
+    currentTab: 'Problem',
+    tabs: ['Problem',
+      'Solution',
+      'Unique Value',
+      'Unfair Advantage',
+      'Customers',
+      'Alternatives',
+      'KPI',
+      'High Level Concept',
+      'Channels'
+      'Early Adopters',
+      'Structure',
+      'Revenue',
+      ],
+    problemValueList: ['Government data exchange', 'Small buisnesses need',
+      ],
+  },
+  computed: {
+    currentTabComponent: function () {
+      return 'tab-' + this.currentTab.toLowerCase().replace(' ', '-')
+    }
 })
 </script>
